--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -4,6 +4,10 @@ html{
 
 body{
     background: linear-gradient(#7209b7, #3f37c0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
 }
 
@@ -11,10 +15,10 @@ body{
     background: rgba(0, 0, 0, .5);
     border-radius: 15px;
     border: 2px solid #f72585;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
     padding: 30px;
     width: 400px;
 }
@@ -80,4 +84,10 @@ body{
 
 .elemento input[type="submit"]:active{
     transform: scale(.9);
+}
+
+@media screen and (max-width: 480px) {
+    .contenedor{
+        width: 60%;
+    }
 }
